# datafusion_quality

./: .pre-commit-config.yaml  Cargo.toml  README.md
.cursor/rules/: rust.mdc
.github/workflows/: check.yml  scheduled.yml  test.yml
modules/datafusion_quality/: Cargo.toml
modules/datafusion_quality/examples/basic/: Cargo.toml
modules/datafusion_quality/examples/basic/src/: main.rs
modules/datafusion_quality/src/: error.rs  lib.rs
modules/datafusion_quality/src/rules/: column.rs  mod.rs  schema.rs  table.rs
src/: lib.rs
