[workspace]
members = [
    "modules/datafusion_quality"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ada Lyons <ada.g.lyons@gmail.com>"]
description = "Data quality tools for DataFusion"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/eadgbear/datafusion_quality"

[workspace.dependencies]
arrow = { version = "54.3.1", features = ["prettyprint"] }
datafusion = { version = "46.0.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
snafu = "0.7"
tokio = { version = "1.0", features = ["full"] }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = 1 }
as_conversions = "warn"
nursery = { level = "warn", priority = 1 }
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
dbg_macro = "deny"
similar_names = { level = "allow", priority = 2 }

# These should be removed eventually
missing_errors_doc = { level = "allow", priority = 2 }
missing_panics_doc = { level = "allow", priority = 2 }
significant_drop_tightening = { level = "allow", priority = 2 }
module_name_repetitions = { level = "allow", priority = 2 }
option_if_let_else = { level = "allow", priority = 2 }
